recursion.logo.koch.Koch.scala.error
Erreur de compilation :
Koch:21: error: not found: value snwoSide
    snwoSide(levels-1,length/3)
    ^